# static-sorting

./: .gitignore  Sorting.hs  Sorting.lhs  bla  blaNot  list  seed  stack.yaml  static-sorting-visualisation.cabal
app/: Main.hs
src/: Sorting.lhs
