name:                static-sorting-visualisation
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/matthias.goergens/static-sorting-visualisation#readme
license:             BSD3
license-file:        LICENSE
author:              Matthias Görgens
maintainer:          matthias.goergens@gmail.com
copyright:           All rights reserved.
category:            experimental
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sorting
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , mtl >= 0.1
                     , JuicyPixels >= 3.2
                     , containers >= 0.5
                     , random >= 1
  default-language:    Haskell2010

executable static-sorting-visualisation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10
                     , mtl >= 0.1
                     , JuicyPixels >= 3.2
                     , containers >= 0.5
                     , extra >= 1.4.10
                     , random >= 1
                     , static-sorting-visualisation
                     , hashable >= 1.2.4.0
                     , shake >= 0.15.10
                     , random-shuffle >= 0.0.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matthias.goergens/static-sorting-visualisation
